--- a/_pages/room1806.md
+++ b/_pages/room1806.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-permalink: /korean/
+permalink: /room1806/
 title: 'korean'
 post_title: 'Explanation on Safety Phase Transition in Large Language Models'
 description: '안전장치로 학습된 모델의 phase transition에 대한 체계적 연구. ' 
@@ -8,7 +8,7 @@ tags: distill
 giscus_comments: false
 date: 2021-05-22
 featured: true
-nav: true
+nav: false
 nav_order: 1
 pagination:
   enabled: false
