update the introduction

--- a/_pages/room1807.md
+++ b/_pages/room1807.md
@@ -38,3 +38,14 @@ _styles: >
 
 ## Introduction 
 
+In recent studies, we found some interesting properties of refusal mechanisms in LLMs. 
+
+1. LLMs tend to refusal more on the complete sentences, while showing jailbreaks on incomplete prompts [room 1805](https://room1805.github.io/room1805/). 
+2. Refusal directions are input-specific and there could be several refusal directions for refusal types. [room 1806](https://room1805.github.io/room1806/) 
+
+Accordingly, we are interested in finding **more finite refusal directions** that can explain the refusal mechanisms in LLMs. The finite refusal directions comes from the assumption that
+
+> There exist countable refusal directions that controls the generation of refusal phrases in LLMs.
+
+For this purpose, we propose a novel method to cluster sample-specific refusal directions based on the similarity of the most effective refusal directions. 
+
