update the papers

--- a/_pages/room1807.md
+++ b/_pages/room1807.md
@@ -2,7 +2,7 @@
 layout: distill
 permalink: /room1807/
 title: 'korean'
-post_title: 'Cluster Specific Refusal Directions In Large Language Models'
+post_title: 'Explore Input Specific Refusal Directions in Large Language Models'
 description: 'Refusal directions are not general, but rather input specific. This work discover the effective refusal directions for the clustered inputs to broad the understanding on the interpretation of refusal directions in LLMs' 
 tags: distill
 giscus_comments: false
@@ -16,7 +16,7 @@ authors:
   - name: Bumjin Park
     affiliations:
       name: KAIST
-
+bibliography: all.bib
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
 _styles: >
@@ -34,6 +34,7 @@ _styles: >
     text-align: center;
     font-size: 16px;
   }
+
 ---
 
 ## Introduction 
@@ -48,4 +49,57 @@ Accordingly, we are interested in finding **more finite refusal directions** tha
 > There exist countable refusal directions that controls the generation of refusal phrases in LLMs.
 
 For this purpose, we propose a novel method to cluster sample-specific refusal directions based on the similarity of the most effective refusal directions. 
+
+
+
+## Methods 
+
+Refusal Specific Clustering Methods
+
+Consider prompts $\mathcal{P}$ which includes both harmful and harmless prompts. 
+As noted by the previous jailbreak works, prompts highly effect jailbreaks of LLMs. 
+Although there could be various types of prompts, this work assumes that LLMs trained with RLHF knows the inputs patterns which are expected to be refused to answers. 
+
+Clarifying the prompt types can further motivate the LLM developers to train more robust refusal mechanisms. 
+
+> One might argue that revealing the prompt types might motivate more jailbreaks of LLMs. However, this does not happen when the inner representations are not provided to the end users, Which is currently out of scopes. 
+
+This work follows the linear representation hypothesis in previous interpretation studies in LLMs <d-cite key="templeton2024scaling"> </d-cite>.   
+
+
+### Finding Refusal Directions
+
+### Option 1
+
+$$
+\begin{gather}
+h_{i+1}^{point} = h_i + \nabla f(Y) \\  
+h_{i+1}^{anchor}  = h_i - \nabla f(Y)
+\end{gather}
+$$
+
+The first one find the refusal point while the second one find the anchor point. 
+
+### Option 2
+
+Anther option can be obtained by following the previous work on concept vectors. 
+
+We additionally normalize the vectors. 
+The benefit is the robustness of anchor point for the refusal directions. However, setting the anchor points can be biased. 
+
+
+### Clustering Refusal Directions
+
+## Experiments
+
+## Datasets
+
+Data plays a crucial role to find the refusal directions. As we find the direction in a contrastive manner for two data points, it is important to determine the anchor point. 
+
+* Representation point : the last representation of a prompt in a specific layer.  
+* Anchor point: th
+
+
+
+Given a representation $h$, we find the refusal and harmful representations by running the activation maximization technique. 
 
