update the refusal

--- a/_pages/room1807.md
+++ b/_pages/room1807.md
@@ -69,6 +69,13 @@ This work follows the linear representation hypothesis in previous interpretatio
 
 ### Finding Refusal Directions
 
+
+Data plays a crucial role to find the refusal directions. As we find the direction in a contrastive manner for two data points, it is important to determine the anchor point. 
+
+* Base point : The point where the concept is activated
+* Anchor point: The anchor point to find the refusal direction
+
+
 ### Option 1
 
 $$
@@ -93,11 +100,6 @@ The benefit is the robustness of anchor point for the refusal directions. Howeve
 ## Experiments
 
 ## Datasets
-
-Data plays a crucial role to find the refusal directions. As we find the direction in a contrastive manner for two data points, it is important to determine the anchor point. 
-
-* Representation point : the last representation of a prompt in a specific layer.  
-* Anchor point: th
 
 
 
