update the read

--- a/_pages/room1807.md
+++ b/_pages/room1807.md
@@ -37,71 +37,15 @@ _styles: >
 
 ---
 
-## Introduction 
+## 24.09.29 
 
-In recent studies, we found some interesting properties of refusal mechanisms in LLMs. 
+* Coding 
+  1. Few-shot, Long-context Steered Bias Implementation and Evaluation  [범진]
+  2. Steered Generation (Logit, Token) - Plots (Powerpoint, PDF, ) [영주, 진실, 연지]
 
-1. LLMs tend to refusal more on the complete sentences, while showing jailbreaks on incomplete prompts [room 1805](https://room1805.github.io/room1805/). 
-2. Refusal directions are input-specific and there could be several refusal directions for refusal types. [room 1806](https://room1805.github.io/room1806/) 
-
-Accordingly, we are interested in finding **more finite refusal directions** that can explain the refusal mechanisms in LLMs. The finite refusal directions comes from the assumption that
-
-> There exist countable refusal directions that controls the generation of refusal phrases in LLMs.
-
-For this purpose, we propose a novel method to cluster sample-specific refusal directions based on the similarity of the most effective refusal directions. 
-
-
-
-## Methods 
-
-Refusal Specific Clustering Methods
-
-Consider prompts $\mathcal{P}$ which includes both harmful and harmless prompts. 
-As noted by the previous jailbreak works, prompts highly effect jailbreaks of LLMs. 
-Although there could be various types of prompts, this work assumes that LLMs trained with RLHF knows the inputs patterns which are expected to be refused to answers. 
-
-Clarifying the prompt types can further motivate the LLM developers to train more robust refusal mechanisms. 
-
-> One might argue that revealing the prompt types might motivate more jailbreaks of LLMs. However, this does not happen when the inner representations are not provided to the end users, Which is currently out of scopes. 
-
-This work follows the linear representation hypothesis in previous interpretation studies in LLMs <d-cite key="templeton2024scaling"> </d-cite>.   
-
-
-### Finding Refusal Directions
-
-
-Data plays a crucial role to find the refusal directions. As we find the direction in a contrastive manner for two data points, it is important to determine the anchor point. 
-
-* Base point : The point where the concept is activated
-* Anchor point: The anchor point to find the refusal direction
-
-
-### Option 1
-
-$$
-\begin{gather}
-h_{i+1}^{point} = h_i + \nabla f(Y) \\  
-h_{i+1}^{anchor}  = h_i - \nabla f(Y)
-\end{gather}
-$$
-
-The first one find the refusal point while the second one find the anchor point. 
-
-### Option 2
-
-Anther option can be obtained by following the previous work on concept vectors. 
-
-We additionally normalize the vectors. 
-The benefit is the robustness of anchor point for the refusal directions. However, setting the anchor points can be biased. 
-
-
-### Clustering Refusal Directions
-
-## Experiments
-
-## Datasets
-
-
-
-Given a representation $h$, we find the refusal and harmful representations by running the activation maximization technique. 
-
+* Writing 
+  1. Related Work  [영주, 진실, 연지]
+  2. Method (Few-shot, Logit, 세팅 Metric) [영주, 진실, 연지]
+  3. Introduction 앞 부분 / [영주, 진실, 연지]
+  4. Dataset 
+ 
